[OEM-264] Adjust from address box to avoid wrapping

--- a/assets/css/print.css
+++ b/assets/css/print.css
@@ -23,7 +23,7 @@
 	float: right;
 	text-align: right;
 	margin-top: 1.4em;
-	width: 16em;
+	width: 20em;
 }
 
 .to-address {
